--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
       <!-- Middle Part -->
   	 	<div class="middle">
-  	       <button onclick="previous_song()" id="pre"><i class="fa fa-step-backward" aria-hidden="true"></i></button>
-      	   <button onclick="justplay()" id="play"><i class="fa fa-play" aria-hidden="true"></i></button>
-  	       <button onclick="next_song()" id="next"><i class="fa fa-step-forward" aria-hidden="true"></i></button>
+  	       <button onclick="previous_song()" id="pre"><i class="fa-solid fa-arrow-rotate-left" aria-hidden="true"></i></button>
+      	   <button onclick="justplay()" id="play"><i class="fa-solid fa-sliders" aria-hidden="true"></i></button>
+  	       <button onclick="next_song()" id="next"><i class="fa-solid fa-arrow-rotate-right" aria-hidden="true"></i></button>
   	   </div>
 
        <!--- Song Duration Part --->
